# SSAO_SSDO

./: CMakeLists.txt  README.md  SSDO.cpp
GLSL/: geometry.fs  geometry.vs  skybox.fs  skybox.vs  ssao.fs  ssao_blur.fs  ssao_lighting.fs  ssao_mixer.fs  ssdo_blur.fs  ssdo_direct.fs  ssdo_indirect.fs  ssdo_lighting.fs  ssdo_mixer.fs  ssdo_pass.vs
lib/: assimp.lib  glfw3.lib
src/: SSAO.cpp  SSAOplusSSDO.cpp  SSDO.cpp  camera.h  mesh.h  model.h  shader.h
src/imgui/: imgui_impl_opengl3.h
src/includes/: camera.h  control.cpp  particle.h  render.cpp
